  04 Nov 2016; Agostino Sarubbo <ago@gentoo.org> metadata.xml:
  update metadata.xml

*uvcdynctrl-0.2.4 (02 Feb 2014)

  02 Feb 2014; Agostino Sarubbo <ago@gentoo.org> +uvcdynctrl-0.2.4.ebuild:
  Version bump to 0.2.4

*uvcdynctrl-0.2.3 (28 Oct 2013)

  28 Oct 2013; Agostino Sarubbo <ago@gentoo.org> +uvcdynctrl-0.2.3.ebuild,
  -uvcdynctrl-0.2.2.ebuild:
  Version bump to 0.2.3, remove old.