@@ -1,6 +1,4 @@
-DIST libwebcam-src-0.2.3.tar.gz 138982 SHA256 5240baaf62ea93b76a2124fc8b0bc00188a6e71a73260d24bf9b15907c6dd2a7 SHA512 e977258b2ec062615902ef12e8c464ecb95fd7dcef886986e9cb64975d67eccb75884182f93ff7df7fe65bb964b708d3f187e3f7302dd3c472205a95b5fdf2a0 WHIRLPOOL 7f03b273fcd87ec2573e757847fa48c031ae076d069fec9ad46fdbe64e5385b2117734067e8acba1702cb6855f32cd5bcb90261f08a79032cfd80fc6d8dd7e43
-DIST libwebcam-src-0.2.4.tar.gz 147605 SHA256 91741aca11f079eb6d043e31b7da6fe1f7927c28d7496590386928f8466b4297 SHA512 ae78d4cf38c1fa96631a912001159d8488ec750d45c8fb59ae56ceb3aca792b0575663010d8931a1ad6aa2c6e2ca1c780594f6549acd9e33169148425e193863 WHIRLPOOL 48e8bf6ae1a01c0c120eb84a063b7b6d437f3c96d3e893a65afd75715dd115c4cf36c2e695beb27fdabeebe8251ed8331e6379649cc8171ef5558f126a9aa014
-EBUILD uvcdynctrl-0.2.3.ebuild 586 SHA256 7c8d052c189ec2a716dba71cba5b85561e40f852cebb3c063bbc6f509020f122 SHA512 145a3ff05b3a53bfd6a046f26634930bf3437eedfeae94a7380b269517bf67830c5f68736b759dbeb47a9d22b1fc7cace004c4c8f1f9c1ae51ee19a6a58a63c1 WHIRLPOOL 838e0bee185596f869c3999109d672ce9b9c09a99c3aaa8aa036836dcb85340d4adf8c962d4cfc2d78700c29bdb5357e5971538058ba9faf95d07783731e032b
-EBUILD uvcdynctrl-0.2.4.ebuild 586 SHA256 7c8d052c189ec2a716dba71cba5b85561e40f852cebb3c063bbc6f509020f122 SHA512 145a3ff05b3a53bfd6a046f26634930bf3437eedfeae94a7380b269517bf67830c5f68736b759dbeb47a9d22b1fc7cace004c4c8f1f9c1ae51ee19a6a58a63c1 WHIRLPOOL 838e0bee185596f869c3999109d672ce9b9c09a99c3aaa8aa036836dcb85340d4adf8c962d4cfc2d78700c29bdb5357e5971538058ba9faf95d07783731e032b
-MISC ChangeLog 392 SHA256 70e068a35f879c46f3382c988f2677257534cebf1f703a9af0f91270e9f82a5d SHA512 e46dd9dca1993d11a7a3973687a3f27074f1329b3747cd0ee42b9af8965b2ce7c327d0b8a68c60ea58964f45ae6e1fba9d49fccb79d60a20f6120e09e43fd106 WHIRLPOOL 131f6d941dc3e93d012f5f315bc2fbf3e3153599d693522117c8223e04c7851b76ee6c52b03eb76ed2932953bb3425d844b25c463955665f62238a54d49d76ce
-MISC metadata.xml 247 SHA256 a07573e5b57603eb46018cd4acbb2fd7188d11f32c4da7b57cca2a017e3a82a8 SHA512 c65adc4867e625368b91701012ddfd7d1fb70b42a799cd18c6acbe6d2daae4d2fd94f554b865f82efefb8df9f7c3c52d4604df67cebf595c44d9c01567cdddac WHIRLPOOL 6bb40ec461701db4091d797f1cdab89b3805d6d9dbcec9ac6434bbcfa632b60efa965c05c4aaa374843907467b7a38f138051e7ec28a1a94c8ba03298a3ad392
+DIST libwebcam-src-0.2.5.tar.gz 147456 SHA256 3ca5199c7b8398b655a7c38e3ad4191bb053b1486503287f20d30d141bda9d41 SHA512 53fe0fb658fbb2bb9916bbf71cf11315b9ac53e77cfa3aa05b84a1d48576efa7c33d98a079cf93cb545d5d9c149a5de55073a624316e7a2c2cd387e3f3914631 WHIRLPOOL 684270c0c26bd41f61eb14491eb3acdda810e06678d0365eda2235760162cee22e8d86079d9891db87bc0f23a8fec9be5a303c0e3a6e5b6363702bc60900f0ea
+EBUILD uvcdynctrl-0.2.5.ebuild 564 SHA256 2dcb3b957a5a90d788e92e020f92d57108809c3d2e5b1ad1f1d9e7f1f8feff80 SHA512 b33e030eb8c9f2e912affb7e8be88bdb60242a9e3065ad2e444c0b51b4dab9dd5dae67dcca4ba04d4db5ba390db9d96f5fcb60b40504b30b8da6439545dd2bb9 WHIRLPOOL 379a26fdbb4086176c58c6dfc49fbea6d0f8c864fd76553d428c8b953d6f4185958e80046a580c7f3410848b3d5c817db153f3e5a98e0cad8e3e282e36e46125
+MISC ChangeLog 609 SHA256 5a01398056ddfc65a9f82e96d0b225d5df0325a76b61aa5b2e077c70485aa8c6 SHA512 ff07d38cd6ec64cdcad1d4744694011a5b4a08c2d1c04f201b0b0bf10380ed2928ab294aa8eb2cbe48e5f4f38e0ba0c936c24493236535ff4e5fceb74e7d153f WHIRLPOOL 8a5d4ccd5cfca825b7505f83542c22373d75780a05e0dbbbcf5206ccccc515604026c9a84532d56b781808dd4f7330ad5abf77f4215350c2cf3abb7962727c02
+MISC metadata.xml 252 SHA256 0df10ba8b53ce829ea0fdf3b8f808ae371f24235ab02a7f94967fe0c2d7845bf SHA512 1f9486ce3b84ae866622da9d6e26a3e873467fe1607826fca6b0cc2f6091b0c8f94c4cff6717c57419867ac74bd371c0ef8f035ffb1ffcb1c4cbfae86f544ab5 WHIRLPOOL f993df191d6ce02786a5a2234510fbae80c9e1e1661c2a89cfe71be92cf5668fda737e28faedb21765de32526df074b3ef4eef6f5110020aa8232b1cb85aa7dc
