@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<maintainer type="person">
-		<email>ago@gentoo.org</email>
-		<name>Agostino Sarubbo</name>
-	</maintainer>
+  <maintainer type="person">
+    <email>ago@gentoo.org</email>
+    <name>Agostino Sarubbo</name>
+  </maintainer>
 </pkgmetadata>
-
