@@ -1,3 +1,9 @@
+*uvcdynctrl-0.2.5 (26 Feb 2020)
+
+  26 Feb 2020; Agostino Sarubbo <ago@gentoo.org> +uvcdynctrl-0.2.5.ebuild,
+  -uvcdynctrl-0.2.3.ebuild, -uvcdynctrl-0.2.4.ebuild, metadata.xml:
+  media-video/uvcdynctrl: bump, cleanup
+
   04 Nov 2016; Agostino Sarubbo <ago@gentoo.org> metadata.xml:
   update metadata.xml
 
